--- a/dre.Rmd
+++ b/dre.Rmd
@@ -15,7 +15,7 @@ description: |
 The first situation is that when we have IPW model misspecified:
 
 $$
-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S}}\right) \neq E\left[Y^{a=1}\right]\\
+\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S}_{i}}\right) \neq E\left[Y^{a=1}\right]\\
 \frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=0\right]}{1-\widehat{P S}_{i}}\right) \neq E\left[Y^{a=0}\right]
 $$
 
@@ -28,48 +28,47 @@ $$
 Then the true ACE will become:
 
 $$
-\begin{aligned}
-& E\left[\overline{\left[R E_{a=1}\right.}-\overparen{\left.D R E_{a=0}\right]}\right]=E\left[\frac{1}{n} \sum_{i=1}^{n}\left(\frac{A_{i}\left(Y_{i}-\hat{P}_{i}^{a=1}\right)}{P S_{i}}+\hat{P}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right)\left(Y_{i}-\hat{Y}_{i}^{a=0}\right)}{1-P S_{i}}+\hat{Y}_{i}^{a=0}\right)\right] \\
-& =\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{A_{i}\left(Y_{i}-P_{i}^{a=1}\right)}{\overline{S_{i}}}+P_{i}^{a=1}\right)\right]-\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right)\left(Y_{i}-P_{i}^{a=0}\right)}{1-\overline{P_{i}}}+P_{i}^{a=0}\right)\right] \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{A_{i}\left(Y_{i}-P_{i}^{a=1}\right)}{P_{i}}\right]+E\left[P_{i}^{a=1}\right]\right)-\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{\left(1-A_{i}\right)\left(Y_{i}-P_{i}^{a=0}\right)}{1-P S_{i}}\right]+E\left[P_{i}^{a=0}\right]\right) \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{P_{i}}\right) E\left[\left(\left[A_{i}=1\right)\left(Y_{i}-\hat{P}_{i}^{a=1}\right)\right]+\hat{P}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-P_{i}}\right) E\left[l\left(A_{i}=0\right)\left(Y_{i}-\hat{P}_{i}^{a=0}\right)\right]+\hat{P}_{i}^{a=0}\right)\right. \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{P_{i}}\right)\left(E\left[Y_{i} \mid A=1\right]-E\left[P_{i}^{a=1} \mid A=1\right]\right)+Y_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\overline{P S}_{i}}\right)\left(E\left[Y_{i} \mid A=0\right]-E\left[Y_{i}^{a=0} \mid A=0\right]\right)+Y_{i}^{a=0}\right) \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\vec{S}_{i}}\right)\left(\hat{i}_{i}^{a=1}-\hat{P}_{i}^{a=1}\right)+\hat{P}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\hat{S}_{i}}\right)\left(\hat{P}_{i}^{a=0}-\hat{P}_{i}^{a=0}\right)+\hat{P}_{i}^{a=0}\right) \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\overline{S S}_{i}}\right)(0)+P_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-P_{i}}\right)(0)+P_{i}^{a=0}\right) \\
-& =\frac{\sum_{i=1}^{n} \hat{p}_{i}^{a=1}}{n}-\frac{\sum_{i=1}^{n} \hat{p}_{i}^{a=0}}{n} \\
+\scriptsize{\begin{aligned}
+E\left[\widehat{\left[D R E_{a=1}\right.}-\widehat{\left. D R E_{a=0}\right]}\right] &= E\left[\frac{1}{n} \sum_{i=1}^{n}\left(\frac{A_{i}\left(Y_{i}-\hat{Y}_{i}^{a=1}\right)}{\widehat{P S_{i}}}+\hat{Y}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right)\left(Y_{i}-\hat{Y}_{i}^{a=0}\right)}{1-{\widehat PS_{i}}}+\hat{Y}_{i}^{a=0}\right)\right] \\
+& =\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{A_{i}\left(Y_{i}-\hat Y_{i}^{a=1}\right)}{\widehat{PS_{i}}}+\hat Y_{i}^{a=1}\right)\right]-\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right)\left(Y_{i}-\hat Y_{i}^{a=0}\right)}{1-{\widehat {PS}_{i}}}+\hat{Y}^{a=0}\right)\right] \\
+& =\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{A_{i}\left(Y_{i}-\hat Y_{i}^{a=1}\right)}{\widehat {PS_{i}}}\right]+E\left[\hat Y_{i}^{a=1}\right]\right)-\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{\left(1-A_{i}\right)\left(Y_{i}-\hat Y_{i}^{a=0}\right)}{1-{\widehat P S_{i}}}\right]+E\left[\hat Y_{i}^{a=0}\right]\right) \\
+& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat {PS_{i}}}\right) E\left[\left [Y_{i}|A_{i}=1\right)-E\left[\hat Y_{i}^{a=1}|A=1\right]+\hat{Y}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-{\widehat {PS_{i}}}}\right) E\left[Y_i|A_{i}=0]-E[\hat Y_{i}^{a=0}|A=0\right]+\hat{Y}_{i}^{a=0}\right)\right. \\
+& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{PS}_{i}}\right)\left(\hat{Y}_{i}^{a=1}-\hat{Y}_{i}^{a=1}\right)+\hat{Y}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{PS}_{i}}\right)\left(\hat{Y}_{i}^{a=0}-\hat{Y}_{i}^{a=0}\right)+\hat{Y}_{i}^{a=0}\right) \\
+& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{PS}_{i}}\right)\left(0\right)+\hat{Y}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{PS}_{i}}\right)\left(0\right)+\hat{Y}_{i}^{a=0}\right) \\
+
+& =\frac{\sum_{i=1}^{n} \hat{Y}_{i}^{a=1}}{n}-\frac{\sum_{i=1}^{n} \hat{Y}_{i}^{a=0}}{n} \\
 & =E\left[Y^{\alpha=1}\right]-E\left[Y^{\alpha=0}\right]
 \end{aligned}
+}
 $$
+$E[Y_i|A=1]=E[\hat {Y_{i}^{a=1}}]$
 
 ## When REG is misspecified, but IPW is correct
 
 The second situation is that when we have REG model misspecified:
-
 $$
 \frac{1}{n} \sum_{i=1}^{n} \hat{Y}_{i}^{a} \neq E\left[Y^{a}\right]
 $$
-
-But our IPW model is correct: $$
+But our IPW model is correct:
+$$
 \begin{aligned}
-& \frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S}}\right)=E\left[Y^{a=1}\right] \\
+& \frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S_i}}\right)=E\left[Y^{a=1}\right] \\
 & \frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=0\right]}{1-\widehat{P S}_{i}}\right)=E\left[Y^{a=0}\right] \\
 \end{aligned}
 $$
-
 Then the true ACE becomes:
-
 $$
-\begin{aligned}
-& E\left[\overline{D R E_{a=1}}-\widehat{D R E_{a=0}}\right]=E\left[\frac{1}{n} \sum_{i=1}^{n}\left(\frac{A_{i} Y_{i}}{\widehat{P S}}-\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S}_{i}}{\widehat{P S}}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S_{i}}}-\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S} S_{i}}\right)\right)\right] \\
+\scriptsize{\begin{aligned}
+E\left[\widehat{D R E_{a=1}}-\widehat{D R E_{a=0}}\right]&=E\left[\frac{1}{n} \sum_{i=1}^{n}\left(\frac{A_{i} Y_{i}}{\widehat{P S_{i}}}-\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S}_{i}}{\widehat{P S}_{i}}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S_{i}}}-\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S} _{i}}\right)\right)\right] \\
 & =\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{A_{i} Y_{i}}{\widehat{P S_{i}}}-\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S_{i}}}{\widehat{P S_{i}}}\right)\right)\right]-\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S}_{i}}-\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S_{i}}}\right)\right)\right] \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{A_{i} Y_{i}}{\widehat{P S}}\right]-E\left[\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S}_{i}}{\widehat{P S} S_{i}}\right)\right]\right)-\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S} S_{i}}\right]-E\left[\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S_{i}}}\right)\right]\right) \\
+& =\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{A_{i} Y_{i}}{\widehat{P S}_{i}}\right]-E\left[\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S}_{i}}{\widehat{P S} _{i}}\right)\right]\right)-\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S} _{i}}\right]-E\left[\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S_{i}}}\right)\right]\right) \\
 & =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{P S}_{i}}\right) I\left(A_{i}=1\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=1}}{\widehat{P S_{i}}}\right) E\left[A_{i}-\widehat{P S}_{i}\right]\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{P S_{i}}}\right) I\left(A_{i}=0\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S_{i}}}\right) E\left[\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)\right]\right) \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{P S}_{i}}\right) I\left(A_{i}=1\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=1}}{\widehat{P S}_{i}}\right)\left(E\left[A_{i}\right]-\widehat{P S_{i}}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{P S}}\right) I\left(A_{i}=0\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S}_{i}}\right)\left(E\left[\left(1-A_{i}\right)\right]-\left(1-\widehat{P S_{i}}\right)\right)\right) \\
+& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{P S}_{i}}\right) I\left(A_{i}=1\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=1}}{\widehat{P S}_{i}}\right)\left(E\left[A_{i}\right]-\widehat{P S_{i}}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{P S}_{i}}\right) I\left(A_{i}=0\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S}_{i}}\right)\left(E\left[\left(1-A_{i}\right)\right]-\left(1-\widehat{P S_{i}}\right)\right)\right) \\
 & =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{P S}_{i}}\right) E\left[Y_{i} \mid A=1\right]-\left(\frac{\widehat{Y}_{i}^{a=1}}{\widehat{P S}_{i}}\right)\left(\widehat{P S}_{i}-\widehat{P S}_{i}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{P S}_{i}}\right) E\left[Y_{i} \mid A=0\right]-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S}_{i}}\right)\left(\left(1-\widehat{P S}_{i}\right)-\left(1-\widehat{P S_{i}}\right)\right)\right) \\
 & =\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S}_{i}}-\left(\frac{\hat{Y}_{i}^{a=1}}{\widehat{P S}_{i}}\right)(0)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=0\right]}{1-\widehat{P S}_{i}}-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S}_{i}}\right)(0)\right) \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S} S_{i}}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=0\right]}{1-\widehat{P S}}\right) \\
+& =\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S}_{i}}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=0\right]}{1-\widehat{P S}_{i}}\right) \\
 & =E\left[Y^{a=1}\right]-E\left[Y^{a=0}\right]
-\end{aligned}
+\end{aligned}}
 $$
 
 In either case, we prove that DRE's unbiasedness holds when either of IPW/REG has been wrongly specified (but the other has to be correctly modeled).
