--- a/dre.Rmd
+++ b/dre.Rmd
@@ -35,12 +35,11 @@ E\left[\widehat{\left[D R E_{a=1}\right.}-\widehat{\left. D R E_{a=0}\right]}\ri
 & =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat {PS_{i}}}\right) E\left[\left [Y_{i}|A_{i}=1\right)-E\left[\hat Y_{i}^{a=1}|A=1\right]+\hat{Y}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-{\widehat {PS_{i}}}}\right) E\left[Y_i|A_{i}=0]-E[\hat Y_{i}^{a=0}|A=0\right]+\hat{Y}_{i}^{a=0}\right)\right. \\
 & =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{PS}_{i}}\right)\left(\hat{Y}_{i}^{a=1}-\hat{Y}_{i}^{a=1}\right)+\hat{Y}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{PS}_{i}}\right)\left(\hat{Y}_{i}^{a=0}-\hat{Y}_{i}^{a=0}\right)+\hat{Y}_{i}^{a=0}\right) \\
 & =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{PS}_{i}}\right)\left(0\right)+\hat{Y}_{i}^{a=1}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{PS}_{i}}\right)\left(0\right)+\hat{Y}_{i}^{a=0}\right) \\
-
 & =\frac{\sum_{i=1}^{n} \hat{Y}_{i}^{a=1}}{n}-\frac{\sum_{i=1}^{n} \hat{Y}_{i}^{a=0}}{n} \\
 & =E\left[Y^{\alpha=1}\right]-E\left[Y^{\alpha=0}\right]
-\end{aligned}
-}
+\end{aligned}}
 $$
+
 $E[Y_i|A=1]=E[\hat {Y_{i}^{a=1}}]$
 
 ## When REG is misspecified, but IPW is correct
