--- a/dre.Rmd
+++ b/dre.Rmd
@@ -61,8 +61,8 @@ $$
 E\left[\widehat{D R E_{a=1}}-\widehat{D R E_{a=0}}\right]&=E\left[\frac{1}{n} \sum_{i=1}^{n}\left(\frac{A_{i} Y_{i}}{\widehat{P S_{i}}}-\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S}_{i}}{\widehat{P S}_{i}}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S_{i}}}-\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S} _{i}}\right)\right)\right] \\
 & =\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{A_{i} Y_{i}}{\widehat{P S_{i}}}-\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S_{i}}}{\widehat{P S_{i}}}\right)\right)\right]-\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S}_{i}}-\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S_{i}}}\right)\right)\right] \\
 & =\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{A_{i} Y_{i}}{\widehat{P S}_{i}}\right]-E\left[\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S}_{i}}{\widehat{P S} _{i}}\right)\right]\right)-\frac{1}{n} \sum_{i=1}^{n}\left(E\left[\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S} _{i}}\right]-E\left[\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S_{i}}}\right)\right]\right) \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{P S}_{i}}\right) I\left(A_{i}=1\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=1}}{\widehat{P S_{i}}}\right) E\left[A_{i}-\widehat{P S}_{i}\right]\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{P S_{i}}}\right) I\left(A_{i}=0\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S_{i}}}\right) E\left[\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)\right]\right) \\
-& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{P S}_{i}}\right) I\left(A_{i}=1\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=1}}{\widehat{P S}_{i}}\right)\left(E\left[A_{i}\right]-\widehat{P S_{i}}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{P S}_{i}}\right) I\left(A_{i}=0\right) E\left[Y_{i}\right]-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S}_{i}}\right)\left(E\left[\left(1-A_{i}\right)\right]-\left(1-\widehat{P S_{i}}\right)\right)\right) \\
+& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{P S}_{i}}\right) E\left[Y_{i}|A=1\right]-\left(\frac{\hat{Y}_{i}^{a=1}}{\widehat{P S_{i}}}\right) E\left[A_{i}-\widehat{P S}_{i}\right]\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{P S_{i}}}\right) E\left[Y_{i}|A=0\right]-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S_{i}}}\right) E\left[\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)\right]\right) \\
+& =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{P S}_{i}}\right)  E\left[Y_{i}|A=1\right]-\left(\frac{\hat{Y}_{i}^{a=1}}{\widehat{P S}_{i}}\right)\left(E\left[A_{i}\right]-\widehat{P S_{i}}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{P S}_{i}}\right)  E\left[Y_{i}|A=0\right]-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S}_{i}}\right)\left(E\left[\left(1-A_{i}\right)\right]-\left(1-\widehat{P S_{i}}\right)\right)\right) \\
 & =\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{\widehat{P S}_{i}}\right) E\left[Y_{i} \mid A=1\right]-\left(\frac{\widehat{Y}_{i}^{a=1}}{\widehat{P S}_{i}}\right)\left(\widehat{P S}_{i}-\widehat{P S}_{i}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\left(\frac{1}{1-\widehat{P S}_{i}}\right) E\left[Y_{i} \mid A=0\right]-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S}_{i}}\right)\left(\left(1-\widehat{P S}_{i}\right)-\left(1-\widehat{P S_{i}}\right)\right)\right) \\
 & =\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S}_{i}}-\left(\frac{\hat{Y}_{i}^{a=1}}{\widehat{P S}_{i}}\right)(0)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=0\right]}{1-\widehat{P S}_{i}}-\left(\frac{\hat{Y}_{i}^{a=0}}{1-\widehat{P S}_{i}}\right)(0)\right) \\
 & =\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S}_{i}}\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=0\right]}{1-\widehat{P S}_{i}}\right) \\
