--- a/dre.Rmd
+++ b/dre.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Doubly Robust Estimator"
 description: |
-  Some additional details about the website
+
 ---
 
 # DRE is a combined method from REG and IPW {#dre}
@@ -12,7 +12,8 @@ description: |
 
 ## When IPW is misspecified, but REG is correct
 
-The first situation is that when we have IPW model misspecified:
+The first situation is that when we have IPW model
+misspecified:
 
 $$
 \frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S}_{i}}\right) \neq E\left[Y^{a=1}\right]\\
@@ -40,23 +41,31 @@ E\left[\widehat{\left[D R E_{a=1}\right.}-\widehat{\left. D R E_{a=0}\right]}\ri
 \end{aligned}}
 $$
 
-$E[Y_i|A=1]=E[\hat {Y_{i}^{a=1}}]$
-
 ## When REG is misspecified, but IPW is correct
 
-The second situation is that when we have REG model misspecified:
-$$
+The second situation is that when we have REG
+model misspecified: $$
 \frac{1}{n} \sum_{i=1}^{n} \hat{Y}_{i}^{a} \neq E\left[Y^{a}\right]
-$$
-But our IPW model is correct:
-$$
+$$ But our IPW model is correct: $$
 \begin{aligned}
 & \frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=1\right]}{\widehat{P S_i}}\right)=E\left[Y^{a=1}\right] \\
 & \frac{1}{n} \sum_{i=1}^{n}\left(\frac{E\left[Y_{i} \mid A=0\right]}{1-\widehat{P S}_{i}}\right)=E\left[Y^{a=0}\right] \\
 \end{aligned}
+$$ First, let's rearrange DRE's formula a bit:
+
 $$
-Then the true ACE becomes:
+\scriptsize{
+\begin{aligned}
+\widehat{D R E}_{a=1}-\widehat{D R E}_{a=0}&=\frac{1}{n} \sum_{i=1}^n\left(\frac{A_i\left(Y_i-\hat{Y}_i^{a=1}\right)}{\widehat{P S}_i}+\hat{Y}_i^{a=1}\right)-\frac{1}{n} \sum_{i=1}^n\left(\frac{\left(1-A_i\right)\left(Y_i-\hat{Y}_i^{a=0}\right)}{1-\widehat{P S}_i}+\hat{Y}_i^{a=0}\right) \\
+& =\frac{1}{n} \sum_{i=1}^n\left(\frac{A_i Y_i}{\widehat{P S}_i}-\frac{A_i \hat{Y}_i^{a=1}}{\widehat{P S}_i}+\hat{Y}_i^{a=1}\right)-\frac{1}{n} \sum_{i=1}^n\left(\frac{\left(1-A_i\right) Y_i}{1-\widehat{P S}_i}-\left(\frac{\left(1-A_i\right) \hat{Y}_i^{a=0}}{1-\widehat{P S}_i}\right)+\hat{Y}_i^{a=0}\right) \\
+& =\frac{1}{n} \sum_{i=1}^n\left(\frac{A_i Y_i}{\widehat{P S_i}}-\left(\frac{A_i \widehat{Y}_i^{a=1}}{\widehat{P S_i}}-\widehat{Y}_i^{a=1}\right)\right)-\frac{1}{n} \sum_{i=1}^n\left(\frac{\left(1-A_i\right) Y_i}{1-\widehat{P S_i}}-\left(\frac{\left(1-A_i\right) \hat{Y}_i^{a=0}}{1-\widehat{P S_i}}-\widehat{Y}_i^{a=0}\right)\right) \\
+& =\frac{1}{n} \sum_{i=1}^n\left(\frac{A_i Y_i}{\widehat{P S}_i}-\hat{Y}_i^{a=1}\left(\frac{A_i}{\widehat{P S}_i}-1\right)\right)-\frac{1}{n} \sum_{i=1}^n\left(\frac{\left(1-A_i\right) Y_i}{1-\widehat{P S}_i}-\hat{Y}_i^{a=0}\left(\frac{\left(1-A_i\right)}{1-\widehat{P S_i}}-1\right)\right) \\
+& =\frac{1}{n} \sum_{i=1}^n\left(\frac{A_i Y_i}{\widehat{P S}_i}-\hat{Y}_i^{a=1}\left(\frac{A_i-\widehat{P S}_i}{\widehat{P S}_i}\right)\right)-\frac{1}{n} \sum_{i=1}^n\left(\frac{\left(1-A_i\right) Y_i}{1-\widehat{P S}_i}-\hat{Y}_i^{a=0}\left(\frac{\left(1-A_i\right)-\left(1-\widehat{P S}_i\right)}{1-\widehat{P S}_i}\right)\right) \\
+&
+\end{aligned}}
 $$
+
+Then the true ACE becomes: $$
 \scriptsize{\begin{aligned}
 E\left[\widehat{D R E_{a=1}}-\widehat{D R E_{a=0}}\right]&=E\left[\frac{1}{n} \sum_{i=1}^{n}\left(\frac{A_{i} Y_{i}}{\widehat{P S_{i}}}-\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S}_{i}}{\widehat{P S}_{i}}\right)\right)-\frac{1}{n} \sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S_{i}}}-\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S} _{i}}\right)\right)\right] \\
 & =\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{A_{i} Y_{i}}{\widehat{P S_{i}}}-\hat{Y}_{i}^{a=1}\left(\frac{A_{i}-\widehat{P S_{i}}}{\widehat{P S_{i}}}\right)\right)\right]-\frac{1}{n} E\left[\sum_{i=1}^{n}\left(\frac{\left(1-A_{i}\right) Y_{i}}{1-\widehat{P S}_{i}}-\hat{Y}_{i}^{a=0}\left(\frac{\left(1-A_{i}\right)-\left(1-\widehat{P S_{i}}\right)}{1-\widehat{P S_{i}}}\right)\right)\right] \\
@@ -70,4 +79,10 @@ E\left[\widehat{D R E_{a=1}}-\widehat{D R E_{a=0}}\right]&=E\left[\frac{1}{n} \s
 \end{aligned}}
 $$
 
-In either case, we prove that DRE's unbiasedness holds when either of IPW/REG has been wrongly specified (but the other has to be correctly modeled).
+In either case, we prove that DRE's unbiasedness
+in estimating the true average causal effects
+holds even though either of IPW/REG has been
+wrongly specified (but the other has to be
+correctly modeled). But it fails to work if both
+inverse-probability weighting model (IPW) and
+outcome regression model (REG) are incorrect.
